lots of changes

--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name=”robots” content=”noindex”>
     <title>Emil Spreitzer die Schwuchtel</title>
+    <link rel="stylesheet" href="res/style.css">
+    <script defer src="./res/js/script.js"></script>
 </head>
 <body>
     <h1>EMIL die SCHWUCHTEL</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, animi, dignissimos harum, totam unde aut officia nulla nisi reprehenderit saepe sit voluptas necessitatibus molestias doloremque porro aperiam! Eaque, atque ut.</p>
+    <p id="bio">Emil Spreitzer wurde 2005 in einem kleinen Dorf am Arsch der Welt geboren. Als Kind hatte er eine schwierige Beziehung zu seiner Mutter, welche ihn immer Fett nannte. Dies führte dazu, dass Emil schon in jungen Jahren begann, Alkohol zu trinken, um seinen Schmerz zu betäuben.
+
+        Als Emil älter wurde, fand er eine weitere Möglichkeit, um seine Schmerzen zu lindern - er begann Snus zu konsumieren. Snus ist eine Art von Tabak, die in Schweden und anderen skandinavischen Ländern sehr verbreitet ist. Emil wurde schnell süchtig nach Snus und trug immer einige Dosen bei sich.
+        
+        Emil heiratete früh und gründete eine Familie, aber seine Suchtprobleme blieben bestehen. Sein Mann versuchte ihm zu helfen, aber Emil konnte seine Sucht nicht kontrollieren. Er verlor seinen Job als Mechaniker, da er oft betrunken zur Arbeit kam und sich nicht konzentrieren konnte. Das Geld wurde knapp und seine Ehe geriet in eine Krise.
+        
+        Emil versuchte mehrmals, seine Sucht zu bekämpfen, aber ohne Erfolg.
+    </p>
+    <div id="image-scroll">
+        <button id="backward-button-image-scroll">&lt;</button>
+        <img id="emil-main-bild" src="./res/image/test-image.jpg" alt="So eine Schwuchtel">
+        <button id="forward-button-image-scroll">&gt;</button>
+    </div>
 </body>
 </html>
