changed text and style

--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
     <script defer src="./res/js/script.js"></script>
 </head>
 <body>
-    <h1>EMIL die SCHWUCHTEL</h1>
-    <p id="bio">Emil Spreitzer wurde 2005 in einem kleinen Dorf am Arsch der Welt geboren. Als Kind hatte er eine schwierige Beziehung zu seiner Mutter, welche ihn immer Fett nannte. Dies führte dazu, dass Emil schon in jungen Jahren begann, Alkohol zu trinken, um seinen Schmerz zu betäuben.
+    <h1>EMIL "die SCHWUCHTEL" Spreitzer</h1>
+    <p id="bio">Emil Spreitzer wurde am 11. August 2005 in einem kleinem Dorf am Arsch der Welt geboren und wuchs in schwierigen familiären Verhältnissen auf. Seine Eltern nannten ihn immer einen dummen Fettsack, wodurch er depressiv wurde. Schon früh begann Emil, seine Probleme mit Alkohol und Tabak zu betäuben, und entwickelte eine Abhängigkeit von Snus, einer Art von Tabakbeuteln, die man unter die Oberlippe legt.
 
-        Als Emil älter wurde, fand er eine weitere Möglichkeit, um seine Schmerzen zu lindern - er begann Snus zu konsumieren. Snus ist eine Art von Tabak, die in Schweden und anderen skandinavischen Ländern sehr verbreitet ist. Emil wurde schnell süchtig nach Snus und trug immer einige Dosen bei sich.
+        Emil wurde frühzeitig aus der Schule genommen und hatte Schwierigkeiten, einen Job zu finden. In seiner Freizeit verbrachte er viel Zeit vor dem Computer und entdeckte das Online-Spiel "League of Legends". Er war begeistert von dem Spiel und begann, es regelmäßig zu spielen. Emil träumte davon, ein professioneller Esportler zu werden und seine finanziellen Probleme zu lösen.
         
-        Emil heiratete früh und gründete eine Familie, aber seine Suchtprobleme blieben bestehen. Sein Mann versuchte ihm zu helfen, aber Emil konnte seine Sucht nicht kontrollieren. Er verlor seinen Job als Mechaniker, da er oft betrunken zur Arbeit kam und sich nicht konzentrieren konnte. Das Geld wurde knapp und seine Ehe geriet in eine Krise.
+        Emil stellte jedoch schnell fest, dass er nicht so talentiert war wie andere Spieler, und begann, frustriert und verzweifelt zu werden. Seine Abhängigkeit von Alkohol und Snus verschlimmerte sich, und er vernachlässigte seine Gesundheit und sozialen Beziehungen. Trotz seiner Bemühungen verbesserte sich sein Spielniveau nicht, und er wurde oft von anderen Spielern beleidigt und gemobbt.
         
-        Emil versuchte mehrmals, seine Sucht zu bekämpfen, aber ohne Erfolg.
+        Emil blieb jedoch hartnäckig und kämpfte weiter, um sein Ziel zu erreichen. Er nahm an Esport-Veranstaltungen teil und versuchte, sich einen Namen in der Liga zu machen. Leider hatte er jedoch nie den Durchbruch, den er sich erhofft hatte, und seine Spielfähigkeiten stagnierten.
     </p>
     <div id="image-scroll">
         <button id="backward-button-image-scroll">&lt;</button>
-        <img id="emil-main-bild" src="./res/image/test-image.jpg" alt="So eine Schwuchtel">
+        <img id="emil-main-bild" src="./res/image/emil1.jpg" alt="So eine Schwuchtel">
         <button id="forward-button-image-scroll">&gt;</button>
     </div>
+
 </body>
 </html>
