--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name=”robots” content=”noindex”>
     <title>Emil Spreitzer die Schwuchtel</title>
-    <link rel="stylesheet" href="res/style.css">
+    <link rel="stylesheet" href="res/css/style.css">
     <script defer src="./res/js/script.js"></script>
 </head>
 <body>
     <h1>EMIL "die SCHWUCHTEL" Spreitzer</h1>
+    <div class="wrapper">
     <p id="bio">Emil Spreitzer wurde am 11. August 2005 in einem kleinem Dorf am Arsch der Welt geboren und wuchs in schwierigen familiären Verhältnissen auf. Seine Eltern nannten ihn immer einen dummen Fettsack, wodurch er depressiv wurde. Schon früh begann Emil, seine Probleme mit Alkohol und Tabak zu betäuben, und entwickelte eine Abhängigkeit von Snus, einer Art von Tabakbeuteln, die man unter die Oberlippe legt.
 
         Emil wurde frühzeitig aus der Schule genommen und hatte Schwierigkeiten, einen Job zu finden. In seiner Freizeit verbrachte er viel Zeit vor dem Computer und entdeckte das Online-Spiel "League of Legends". Er war begeistert von dem Spiel und begann, es regelmäßig zu spielen. Emil träumte davon, ein professioneller Esportler zu werden und seine finanziellen Probleme zu lösen.
@@ -25,5 +26,10 @@
         <button id="forward-button-image-scroll">&gt;</button>
     </div>
 
+    <div class="link-area">
+        <a href="./res/sites/rap.html">Wofür interessiert sich Emil</a>
+        <a href="./res/sites/sexuality.html">Sexualität</a>
+    </div>
+    </div>
 </body>
 </html>
